@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-15T00:51:43Z",
-  "count_outdated" : 398,
-  "uniques_outdated" : 22,
-  "count" : 410,
-  "uniques" : 26,
+  "timestamp" : "2022-06-16T08:13:30Z",
+  "count_outdated" : 404,
+  "uniques_outdated" : 23,
+  "count" : 412,
+  "uniques" : 27,
   "views" : [
-    {
-      "timestamp": "2022-06-02T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 3,
@@ -28,6 +21,13 @@
     },
     {
       "timestamp": "2022-06-10T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-16T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "uniques": 1,
