@@ -1,12 +1,7 @@
 {
-  "count": 12,
+  "count": 8,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-06-02T00:00:00Z",
-      "count": 6,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 3,
@@ -19,6 +14,11 @@
     },
     {
       "timestamp": "2022-06-10T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-16T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
